app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: portal-atendimento
  name: portal-atendimento
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: portal-atendimento
    weight: 100
